fix: remove double border between mobile header and table in XTableServer

--- a/XTableServer/XTableServer.scss
+++ b/XTableServer/XTableServer.scss
@@ -36,7 +36,6 @@
 .x-table-mobile-header {
   background-color: $table-thead-bg-color;
   color: $table-th-font-color;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
   padding: 8px 16px;
   height: 36px;
   display: flex;
